@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.3'
+    id 'org.springframework.boot' version '2.4.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -19,4 +19,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+bootRun {
+    jvmArgs = ['-Xlog:gc*=debug:file=./logs/gc_%t_%p.log:time,level,tags:filesize=1M,filecount=5']
 }
